@@ -10,6 +10,7 @@ max generation mult = 6
 use start guess = True
 use boundaries = True
 sleep time = 0.2
+use parallel processing = False
 create trial = best_1_bin
 errorbar level = 1.05
 
